# gimg-web

./: .gitignore  .railwayignore  Dockerfile  README.md  requirements.txt
api/: main.py
frontend/: index.html
frontend/src/: App.css  App.jsx
frontend/src/api/: client.js
frontend/src/components/: ResultView.jsx  ToolCard.jsx  ToolOptions.jsx  UploadZone.jsx
frontend/src/data/: tools.js
frontend/src/pages/: Home.jsx  Tool.jsx
gimg/: __init__.py  blur_face.py  cli.py  compress.py  convert.py  crop.py  editor.py  html_to_img.py  info.py  meme.py  metadata.py  remove_bg.py  resize.py  rotate.py  upscale.py  utils.py  watermark.py
rust-api/: .dockerignore  Cargo.toml  Dockerfile  README.md
rust-api/src/: handlers.rs  image_utils.rs  main.rs  types.rs  validation.rs
