[package]
name = "gimg-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
image = "0.25"
imageproc = "0.25"
fast_image_resize = "5"
rayon = "1.10"
tower-http = { version = "0.6", features = ["cors", "limit", "fs"] }
axum-extra = { version = "0.10", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kamadak-exif = "0.6"
ab_glyph = "0.2"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
mime = "0.3"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1